--- a/data/cards/42932862.yaml
+++ b/data/cards/42932862.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 冥占术姬 塔罗之幽魂
 text:
   en: |-
-    You can Ritual Summon this card with "Underworld Ritual of Prediction". Must be Ritual Summoned, or Special Summoned with "Prediction Princess Tarotrei". You can only use each of the following effects of "Prediction Princess Tarotreith" once per turn. (Quick Effect): You can activate 1 of these effects;
+    You can Ritual Summon this card with "Underworld Ritual of Prediction". Must be Ritual Summoned, or Special Summoned with "Prediction Princess Tarotrei". You can only use each effect of "Prediction Princess Tarotreith" once per turn. (Quick Effect): You can activate 1 of these effects;
     ● Flip any number of face-down monsters you control to face-up Defense Position.
     ● Flip any number of face-up monsters you control to face-down Defense Position.
     FLIP: You can Special Summon 1 Flip monster from your Deck in face-down Defense Position.
