--- a/data/cards/yugipedia903676.yaml
+++ b/data/cards/yugipedia903676.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Fish Tuner + 1+ non-Tuner monsters
-    At the start of the Damage Step, if this card battles an opponent's monster: You can banish that opponent's monster. During your opponent's Standby Phase: You can banish this card, then, if the monsters used as material for this card's Synchro Summon are all in your GY, you can can Special Summon all of them, but banish them when they leave the field. You can only use each effect of "Guoglim, Spear of the Ghoti" once per turn.
+    At the start of the Damage Step, if this card battles an opponent's monster: You can banish that opponent's monster. During your opponent's Standby Phase: You can banish this card, then, if the monsters used as material for this card's Synchro Summon are all in your GY, you can Special Summon all of them, but banish them when they leave the field. You can only use each effect of "Guoglim, Spear of the Ghoti" once per turn.
   de:
   es:
   fr:
