--- a/data/cards/72329844.yaml
+++ b/data/cards/72329844.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 monsters, including a Level/Rank/Link 2 monster
-    Cannot be used as Link Material the turn it is Link Summoned. You can only use 1 of the following effects of "Spright Sprind" per turn, and only once that turn. If this card is Link Summoned: You can send 1 Level 2 monster from your Deck to the GY. If another monster(s) is Special Summoned while this card is on the field (except during the Damage Step): You can detach 1 material from an Xyz Monster you control, then target 1 monster on the field; return it to the hand.
+    Cannot be used as Link Material the turn it is Link Summoned. You can only use 1 of the following effects of "Spright Sprind" per turn, and only once that turn. If this card is Link Summoned: You can send 1 Level 2 monster from your Deck to the GY. If another monster is Special Summoned while this card is on the field (except during the Damage Step): You can detach 1 material from an Xyz Monster you control, then target 1 monster on the field; return it to the hand.
   de:
   es:
   fr:
