VJump promo update
Removed Kittytale
Added Beetle Amalgamaton Zekstagger

--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -28,6 +28,6 @@
 - set_abbreviation: SLF1
   fake_password_range:
     - 100293000
-# Kittytale
-- yugipedia: 895427
-  fake_password: 100200222
+# Beetle Amalgamaton Zekstagger
+- yugipedia: 900492
+  fake_password: 100200226
