--- a/data/cards/14568951.yaml
+++ b/data/cards/14568951.yaml
@@ -6,7 +6,7 @@ name:
   es: Ninja del Dragón Azul
   fr: Ninja Dragon Bleu
   it: Ninja Drago Blu
-  pt:
+  pt: Ninja do Dragão Azul
   ja: <ruby>青<rt>せい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>の<ruby>忍者<rt>にんじゃ</rt></ruby>
   ja_romaji: Seiryū no Ninja
   ko: 청룡의 첩자
@@ -24,7 +24,8 @@ text:
     Une fois par tour, durant le tour de chaque joueur : vous pouvez défausser 1 monstre "Ninja" et 1 carte "Ninjitsu" ou "Nin-Jitsu" pour cibler 1 monstre face recto contrôlé par votre adversaire ; ce tour, les effets du monstre sont annulés, et aussi, le monstre ne peut pas attaquer.
   it: |-
     Una volta per turno, durante il turno di qualsiasi giocatore: puoi scartare 1 mostro "Ninja" e 1 carta "Arte Ninjitsu" per scegliere come bersaglio 1 mostro scoperto controllato dal tuo avversario; in questo turno, gli effetti di quel mostro sono annullati, e inoltre quel mostro non può attaccare.
-  pt:
+  pt: |-
+    Uma vez por turno (Efeito Rápido): você pode descartar 1 monstro "Ninja" e 1 card "Ninjitsu" e, depois, escolha 1 monstro com a face para cima que seu oponente controla; neste turno, ele não pode atacar e, além disso, seus efeitos são negados.
   ja: |-
     １ターンに１度、手札から「忍者」と名のついたモンスター１体と「忍法」と名のついたカード１枚を捨て、相手フィールド上に表側表示で存在するモンスター１体を選択して発動できる。このターン、選択したモンスターは攻撃できず、効果は無効化される。この効果は相手ターンでも発動できる。
   ko: |-
