--- a/data/cards/40279770.yaml
+++ b/data/cards/40279770.yaml
@@ -6,7 +6,7 @@ name:
   es: Bastión Plumanegra
   fr: Balise Plume Noire
   it: Faro Piuma Nera
-  pt:
+  pt: Farol de Pena Negra
   ja: <ruby>黒<rt>くろ</rt></ruby><ruby>羽<rt>はね</rt></ruby>の<ruby>導<rt>みちび</rt></ruby>き
   ja_romaji: Kurohane no Michibiki
   ko: 검은 날개의 인도
@@ -24,7 +24,8 @@ text:
     Activable uniquement lorsque vous recevez des dommages par l'effet d'une carte. Invoquez Spécialement 1 monstre "Aile Noire" de Niveau 4 ou moins depuis votre main.
   it: |-
     Attiva solo quando subisci danno dall'effetto di una carta. Evoca Specialmente 1 mostro "Alanera" di Livello 4 o inferiore dalla tua mano.
-  pt:
+  pt: |-
+    Quando você sofrer dano de um efeito de card: Invoque por Invocação-Especial 1 monstro "Asanegra" de Nível 4 ou menos da sua mão.
   ja: |-
     カードの効果によって自分がダメージを受けた時に発動する事ができる。手札からレベル４以下の「ＢＦ」と名のついたモンスター１体を特殊召喚する。
   ko: |-
