--- a/data/cards/43906884.yaml
+++ b/data/cards/43906884.yaml
@@ -6,7 +6,7 @@ name:
   es: Bomba Trampa Alanegra
   fr: Mine Aile Noire
   it: Alanera - Trappola Esplosiva
-  pt:
+  pt: Asanegra - Carga Explosiva
   ja: <ruby>ＢＦ<rt>ブラックフェザー</rt></ruby>－マイン
   ja_romaji: Burakkufezā - Main
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－마인
@@ -24,7 +24,8 @@ text:
     Lorsque cette carte Posée est détruite par l'effet d'une carte de votre adversaire lorsque vous contrôlez un monstre face recto "Aile Noire", infligez 1000 points de dommages à votre adversaire et piochez 1 carte.
   it: |-
     Quando questa carta Posizionata viene distrutta dall'effetto di una carta del tuo avversario fino a quando tu controlli un mostro "Alanera" scoperto, infliggi 1000 danni al tuo avversario e pesca 1 carta.
-  pt:
+  pt: |-
+    Quando este card Baixado for destruído por um efeito de card do seu oponente, enquanto você controlar um monstro "Asanegra": cause 1000 de dano ao seu oponente e, se isso acontecer, compre 1 card.
   ja: |-
     セットされたこのカードが相手の効果によって破壊された時、自分フィールド上に「ＢＦ」と名のついたモンスターが表側表示で存在する場合、相手ライフに１０００ポイントダメージを与え、自分はデッキからカードを１枚ドローする。
   ko: |-
