--- a/data/cards/64952266.yaml
+++ b/data/cards/64952266.yaml
@@ -6,7 +6,7 @@ name:
   es: Contra el Viento
   fr: Puissance du Vent
   it: Controvento
-  pt:
+  pt: Contra o Vento
   ja: アゲインスト・ウィンド
   ja_romaji: Ageinsuto Windo
   ko: 어게인스트 윈드
@@ -24,7 +24,8 @@ text:
     Sélectionnez 1 monstre "Aile Noire" dans votre Cimetière. Recevez des dommages égaux à l'ATK du monstre sélectionné, et ajoutez-le à votre main.
   it: |-
     Scegli 1 mostro "Alanera" nel tuo Cimitero. Subisci danni pari all'ATK del mostro scelto, e aggiungilo alla tua mano.
-  pt:
+  pt: |-
+    Escolha 1 monstro "Asanegra" no seu Cemitério; sofra dano igual ao ATK do alvo e, se isso acontecer, adicione-o à sua mão.
   ja: |-
     自分の墓地に存在する「ＢＦ」と名のついたモンスター１体を選択して発動する。自分はそのモンスターの攻撃力分のダメージを受け、そのモンスターを手札に加える。
   ko: |-
