--- a/data/cards/78060096.yaml
+++ b/data/cards/78060096.yaml
@@ -6,7 +6,7 @@ name:
   es: Rey del Terror Salmón
   fr: Saumon Roi de la Terreur
   it: Salmon Sovrano del Terrore
-  pt:
+  pt: Salmão Rei do Terror
   ja: ジェノサイドキングサーモン
   ja_romaji: Jenosaido Kingu Sāmon
   ko: 제노사이드킹 새먼
@@ -24,7 +24,8 @@ text:
     Un saumon redouté, maître de la Mer des Ténèbres. Sa laitance est le mets le plus délicat du Monde des Ténèbres.
   it: |-
     Un temuto salmone, maestro del Mare dell'Oscurità. Il suo caviale è la miglior prelibatezza del Mondo dell'Oscurità.
-  pt:
+  pt: |-
+    Um salmão temido, mestre do Mar das Trevas. As suas ovas são o melhor canapé do Mundo das Trevas.
   ja: |-
     暗黒海の主として恐れられている巨大なシャケ。その卵は暗黒界一の美味として知られている。
   ko: |-
