--- a/data/cards/89628781.yaml
+++ b/data/cards/89628781.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Scegli come bersaglio 1 mostro "Ninja" che controlli; esso non può essere distrutto in battaglia.
   pt: |-
-    Escolha 1 monstro que inclua "Ninja" no seu nome no seu Campo para activar este card. Enquanto este card permanecer no Campo, com a face para cima, o monstro escolhido não é destruído como resultado de um combate (o cálculo de dano é aplicado normalmente).
+    Ative este card ao escolher 1 monstro "Ninja" que você controla. Ele não pode ser destruído em batalha.
   ja: |-
     自分フィールド上の「忍者」という名のついたモンスター１体を選択して発動する。このカードがフィールド上に存在する限り、選択したモンスターは戦闘によっては破壊されない。（ダメージ計算は適用する）
   ko: |-
