--- a/data/cards/25435080.yaml
+++ b/data/cards/25435080.yaml
@@ -6,7 +6,7 @@ name:
   es: Alanegra - Bombardeo
   fr: Aile Noire - Bombardement
   it: Alanera - Bombardamento
-  pt:
+  pt: Asanegra - Bombardeio
   ja: <ruby>ＢＦ<rt>ブラックフェザー</rt></ruby>－アンカー
   ja_romaji: Burakku Fezā Ankā
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－앵커
@@ -24,7 +24,8 @@ text:
     Sacrifiez 1 monstre "Aile Noire" pour sélectionner 1 Monstre Synchro face recto que vous contrôlez. Ce Monstre Synchro gagne un montant d'ATK égal à l'ATK du monstre Sacrifié, jusqu'à la End Phase.
   it: |-
     Offri come Tributo 1 mostro "Alanera" per scegliere 1 Mostro Synchro scoperto che controlli. Quel Mostro Synchro guadagna ATK pari all'ATK del mostro offerto come Tributo, fino alla End Phase.
-  pt:
+  pt: |-
+    Ofereça como Tributo 1 monstro "Asanegra" e, depois, escolha 1 Monstro Sincro que você controla; até o final deste turno, ele ganha ATK igual ao ATK que o monstro oferecido como Tributo tinha no campo.
   ja: |-
     「ＢＦ」と名のついたモンスター１体をリリースし、自分フィールド上に表側表示で存在するシンクロモンスター１体を選択して発動する。選択したモンスターの攻撃力はエンドフェイズ時まで、このカードを発動するためにリリースしたモンスターの攻撃力分アップする。
   ko: |-
