--- a/data/cards/52833089.yaml
+++ b/data/cards/52833089.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Attiva solo quando un mostro "Alanera" che controlli viene distrutto in battaglia e mandato al Cimitero. Infliggi 400 danni al tuo avversario per ogni carta controllata dal tuo avversario.
   pt: |-
-    Ative somente quando um monstro "Blackwing" que você controla é destruído em batalha e enviado ao Cemitério. Inflija 400 de dano ao seu oponente para cada carta que ele controla.
+    Quando um monstro "Asanegra" que você controla for destruído em batalha e enviado para o Cemitério: cause 400 de dano ao seu oponente para cada card que ele controla.
   ja: |-
     自分フィールド上に存在する「ＢＦ」と名のついたモンスターが戦闘によって破壊され墓地へ送られた時に発動する事ができる。相手フィールド上に存在するカード１枚につき、相手ライフに４００ポイントダメージを与える。
   ko: |-
