--- a/data/cards/yugipedia904367.yaml
+++ b/data/cards/yugipedia904367.yaml
@@ -32,6 +32,7 @@ attribute: EARTH
 level: 8
 atk: 2800
 def: 1600
+materials: 1 Tuner + 1 or more non-Tuner monsters
 sets:
   en:
   - set_number: DABL-EN083
