--- a/data/cards/06459419.yaml
+++ b/data/cards/06459419.yaml
@@ -6,7 +6,7 @@ name:
   es: Chamanismo Amazoness
   fr: Rituel Shamanique Amazonesse
   it: Sciamanesimo Amazoness
-  pt:
+  pt: Xamanismo de Amazoness
   ja: アマゾネス<ruby>転<rt>てん</rt></ruby><ruby>生<rt>せい</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
   ja_romaji: Amazonesu Tenseijutsu
   ko: 아마조네스 전생술
@@ -17,14 +17,15 @@ text:
   en: |-
     Destroy all face-up "Amazoness" monsters you control. Then, you can Special Summon any number of Level 4 or lower "Amazoness" monsters from your Graveyard in face-up Defense Position, up to the number of monsters destroyed by this effect.
   de: |-
-    Zerstöre alle offenen „Amazonisch“-Monster, die du kontrollierst. Dann kannst du eine Anzahl „Amazonisch“-Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Friedhof in die offene Verteidigungsposition beschwören, bis zur Anzahl der Monster, die durch diesen Effekt zerstört wurden.
+    Zerstöre alle „Amazonisch“-Monster, die du kontrollierst, dann kannst du „Amazonisch“-Monster der Stufe 4 oder niedriger bis zur Anzahl der Monster, die durch diesen Effekt zerstört wurden, als Spezialbeschwörung von deinem Friedhof in die offene Verteidigungsposition beschwören.
   es: |-
-    Destruye todos los monstruos "Amazoness" boca arriba que controles. Después, puedes Invocar de Modo Especial, desde tu Cementerio, tanta cantidad de monstruos "Amazoness" de Nivel 4 o menor, en Posición de Defensa boca arriba, como monstruos hayas destruido por este efecto.
+    Destruye todos los monstruo "Amazoness" que controles, y después puedes Invocar de Modo Especial, desde tu Cementerio, monstruos "Amazoness" de Nivel 4 o menor, en Posición de Defensa boca arriba, hasta el número de monstruos destruidos por este efecto.
   fr: |-
-    Détruisez tous les monstres "Amazonesse" face recto que vous contrôlez. Ensuite, vous pouvez Invoquer Spécialement un nombre de monstres "Amazonesse" de Niveau 4 ou moins depuis votre Cimetière en Position de Défense face recto, égal ou inférieur au nombre de monstres détruits par cet effet.
+    Détruisez tous les monstres "Amazonesse" que vous contrôlez, puis, vous pouvez Invoquer Spécialement un nombre de monstres "Amazonesse" de max. Niveau 4 depuis votre Cimetière en Position de Défense face recto, inférieur ou égal au nombre de monstres détruits par cet effet.
   it: |-
-    Distruggi tutti i mostri "Amazoness" scoperti che controlli. Poi, puoi Evocare Specialmente, scoperti in Posizione di Difesa, un numero di mostri "Amazoness" di Livello 4 o inferiore dal tuo Cimitero pari al massimo al numero di mostri distrutti da questo effetto.
-  pt:
+    Distruggi tutti i mostri "Amazoness" che controlli, poi puoi Evocare Specialmente mostri "Amazoness" di Livello 4 o inferiore dal tuo Cimitero, scoperti in Posizione di Difesa, fino al numero di mostri distrutti da questo effetto.
+  pt: |-
+    Destrua todos os monstros "Amazoness" que você controla e, depois, você pode Invocar por Invocação-Especial monstros "Amazoness" de Nível 4 ou menos do seu Cemitério com a face para cima em Posição de Defesa, até o número de monstros destruídos por este efeito.
   ja: |-
     自分フィールド上に表側表示で存在する「アマゾネス」と名のついたモンスターを全て破壊する。その後、破壊した数と同じ数まで自分の墓地に存在するレベル４以下の「アマゾネス」と名のついたモンスターを表側守備表示で特殊召喚する事ができる。
   ko: |-
