--- a/data/cards/10632284.yaml
+++ b/data/cards/10632284.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Evoca Specialmente questa carta come Mostro con Effetto (Bestia/TERRA/Livello 2/ATK 0/DEF 2000). (Questa carta è ancora anche una Trappola.) Se questa carta è nella Zona Mostri (Effetto Rapido): puoi dichiarare 1 Tipo e 1 Attributo, poi scegliere come bersaglio 1 mostro scoperto sul Terreno; esso diventa di quel Tipo e Attributo, fino alla fine di questo turno. Puoi utilizzare questo effetto di "Elefante Mimesi" una sola volta per turno.
   pt: |-
-    Invoque este card por Invocação-Especial como um Monstro de Efeito (Besta/TERRA/Nível 2/ATK 0/DEF 2000). (Este card ainda é considerado uma Armadilha.) Se este card estiver na Zona de Monstros (Efeito Rápido): você pode declarar 1 Tipo e 1 Atributo e, depois, escolha 1 monstro com a face para cima no campo; até o final deste turno ele se torna desse Tipo e Atributo. Você só pode usar este efeito de "Elefante Mimese" uma vez por turno.
+    Invoque este card por Invocação-Especial como um Monstro de Efeito (Besta/TERRA/Nível 2/ATK 0/DEF 2000). (Este card ainda é considerado uma Armadilha.) Se este card estiver na Zona de Monstros (Efeito Rápido): você pode declarar 1 Tipo e 1 Atributo e, depois, escolha 1 monstro com a face para cima no campo; até o final deste turno, ele se torna desse Tipo e Atributo. Você só pode usar este efeito de "Elefante Mimese" uma vez por turno.
   ja:
   ko:
   zh-TW:
