--- a/data/cards/12160911.yaml
+++ b/data/cards/12160911.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     When this card is sent from your hand to your Graveyard by an opponent's card effect: Inflict 2000 damage to your opponent.
   de: |-
-    Wenn diese Karte durch einen Effekt, den dein Gegner kontrolliert, aus deiner Hand auf den Friedhof gelegt wird, füge den Life Points deines Gegners 2000 Punkte Schaden zu.
+    Falls diese Karte durch einen Karteneffekt eines Gegners von deiner Hand auf deinen Friedhof gelegt wird: Füge deinem Gegner 2000 Schaden zu.
   es: |-
-    Cuando esta carta es mandada a tu Cementerio desde tu mano por el efecto de una carta de tu adversario: inflige 2000 puntos de daño a tu adversario.
+    Si esta carta es mandada a tu Cementerio desde tu mano por efecto de una carta del adversario: inflige 2000 puntos de daño a tu adversario.
   fr: |-
-    Lorsque cette carte est envoyée depuis votre main à votre Cimetière par un effet de carte de votre adversaire : infligez 2000 points de dommages à votre adversaire.
+    Si cette carte est envoyée depuis votre main à votre Cimetière par un effet de carte de l'adversaire : infligez 2000 points de dommages à votre adversaire.
   it: |-
-    Quando questa carta viene mandata dalla tua mano al Cimitero per effetto di una carta controllata dal tuo avversario, infliggi 2000 punti di danno ai Life Points del tuo avversario.
+    Se questa carta viene mandata dalla tua mano al tuo Cimitero dall'effetto di una carta dell'avversario: infliggi 2000 danni al tuo avversario.
   pt: |-
-    Quando este card é enviado diretamente da sua mão para o Cemitério, pelo efeito de um card controlado pelo seu adversário, inflija 2000 pontos de dano aos Life Points do seu adversário.
+    Se este card for enviado da sua mão para o seu Cemitério por um efeito de card do oponente: cause 2000 de dano ao seu oponente.
   ja: |-
     相手がコントロールするカードの効果によって、このカードが手札から墓地に送られた時、相手ライフに２０００ポイントダメージを与える。
   ko: |-
