--- a/data/cards/37354507.yaml
+++ b/data/cards/37354507.yaml
@@ -19,10 +19,10 @@ text:
     During your Main Phase: You can Set 1 "Ninjitsu Art" Spell/Trap directly from your Deck. You can only use this effect of "Ninja Grandmaster Saizo" once per turn. While this card points to a monster(s), this card cannot be targeted for an attack, also your opponent cannot target it with card effects.
   de: |-
     2 „Ninja“-Monster
-    Während deiner Main Phase: Du kannst 1 „Ninjitsu-Kunst“-Zauber/Falle direkt von deinem Deck setzen. Du kannst diesen Effekt von „Ninja-Großmeister Saizo“ nur einmal pro Spielzug verwenden. Solange diese Karte auf ein oder mehr Monster zeigt, kann sie nicht als Ziel für einen Angriff gewählt werden, zusätzlich kann dein Gegner sie nicht als Ziel für Karteneffekte wählen.
+    Während deiner Main Phase: Du kannst 1 „Ninjitsu-Kunst“-Zauber/Falle direkt von deinem Deck setzen. Du kannst diesen Effekt von „Ninja-Großmeister Saizo“ nur einmal pro Spielzug verwenden. Solange diese Karte auf ein oder mehr Monster zeigt, kann diese Karte nicht als Ziel für einen Angriff gewählt werden, zusätzlich kann dein Gegner sie nicht als Ziel für Karteneffekte wählen.
   es: |-
     2 monstruos "Ninja"
-    Durante tu Main Phase: puedes Colocar, directamente desde tu Deck, 1 Mágica/Trampa "Ninjitsu Arte". Sólo puedes usar este efecto de "Granmaestro Ninja Saizo" una vez por turno. Mientras esta carta apunte a uno o más monstruos, esta carta no puede ser seleccionada para ataques, y además tu adversario no puede seleccionarla con efectos de cartas.
+    Durante tu Main Phase: puedes Colocar 1 Mágica/Trampa "Ninjitsu Arte" directamente desde tu Deck. Sólo puedes usar este efecto de "Granmaestro Ninja Saizo" una vez por turno. Mientras esta carta apunte a uno o más monstruos, esta carta no puede ser seleccionada para ataques, y además tu adversario no puede seleccionarla con efectos de cartas.
   fr: |-
     2 monstres "Ninja"
     Durant votre Main Phase : vous pouvez Poser 1 Magie/Piège "Ninjitsu" ou "Nin-Jitsu" directement depuis votre Deck. Vous ne pouvez utiliser cet effet de "Maestro Ninja Saizo" qu'une fois par tour. Tant que cette carte pointe un ou plusieurs monstres, cette carte ne peut pas être ciblée par une attaque, et aussi, votre adversaire ne peut pas la cibler avec des effets de carte.
