--- a/data/cards/50766506.yaml
+++ b/data/cards/50766506.yaml
@@ -6,7 +6,7 @@ name:
   es: Ninjitsu Arte de la Duplicación
   fr: Art Ninjitsu de la Duplication
   it: Arte Ninjitsu della Duplicazione
-  pt:
+  pt: Arte Ninjitsu da Duplicação
   ja: <ruby>忍<rt>にん</rt></ruby><ruby>法<rt>ぽう</rt></ruby> <ruby>分<rt>ぶん</rt></ruby><ruby>身<rt>しん</rt></ruby>の<ruby>術<rt>じゅつ</rt></ruby>
   ja_romaji: Ninpō Bunshin no Jutsu
   ko: 인법 분신술
@@ -17,14 +17,15 @@ text:
   en: |-
     Tribute 1 "Ninja" monster; Special Summon any number of "Ninja" monsters from your Deck, in face-up Attack Position or face-down Defense Position, with combined Levels less than or equal to the Level of the Tributed monster. When this card leaves the field: Destroy those monsters.
   de: |-
-    Biete 1 "Ninja"-Monster als Tribut an; beschwöre eine beliebige Anzahl "Ninja"-Monster, deren gemeinsame Stufe kleiner oder gleich der Stufe des als Tribut angebotenen Monsters ist, als Spezialbeschwörung von deinem Deck in die offene Angriffsposition oder die verdeckte Verteidigungsposition. Wenn diese Karte das Spielfeld verlässt: Zerstöre die Monster.
+    Aktiviere diese Karte, indem du 1 „Ninja“-Monster als Tribut anbietest; beschwöre eine beliebige Anzahl „Ninja“-Monster, deren gemeinsame Stufe kleiner oder gleich der Stufe des als Tribut angebotenen Monsters ist, als Spezialbeschwörung von deinem Deck in die offene Angriffsposition und/oder verdeckte Verteidigungsposition. Wenn diese Karte das Spielfeld verlässt, zerstöre jene Monster.
   es: |-
-    Sacrifica 1 monstruo "Ninja"; Invoca de Modo Especial, desde tu Deck, cualquier número de monstruos "Ninja" en Posición de Ataque boca arriba o en Posición de Defensa boca abajo, y cuyos Niveles combinados sean iguales o menores que el Nivel del monstruo Sacrificado. Cuando esta carta deja el Campo: destruye esos monstruos.
+    Activa esta carta Sacrificando 1 monstruo "Ninja"; Invoca de Modo Especial, desde tu Deck, cualquier número de monstruos "Ninja" en Posición de Ataque boca arriba y/o Posición de Defensa boca abajo, con Niveles combinados iguales o menores al Nivel del monstruo Sacrificado. Cuando esta carta deje el Campo, destruye esos monstruos.
   fr: |-
-    Sacrifiez 1 monstre "Ninja" ; Invoquez Spécialement un nombre de monstres "Ninja" depuis votre Deck, en Position d'Attaque face recto ou en Position de Défense face verso, dont le total des Niveaux est inférieur ou égal au Niveau du monstre Sacrifié. Lorsque cette carte quitte le Terrain : détruisez les monstres.
+    Activez cette carte en Sacrifiant 1 monstre "Ninja" ; Invoquez Spécialement un nombre de votre choix de monstres "Ninja" depuis votre Deck, en Position d'Attaque face recto et/ou en Position de Défense face verso, dont le total des Niveaux est inférieur ou égal au Niveau du monstre Sacrifié. Lorsque cette carte quitte le Terrain, détruisez ces monstres.
   it: |-
-    Offri come Tributo 1 mostro "Ninja"; Evoca Specialmente un qualsiasi numero di mostri "Ninja" dal tuo Deck, scoperti in Posizione di Attacco o coperti in Posizione di Difesa, la cui somma dei Livelli sia pari o inferiore al Livello del mostro offerto come Tributo. Quando questa carta lascia il Terreno: distruggi quei mostri.
-  pt:
+    Attiva questa carta offrendo come Tributo 1 mostro "Ninja"; Evoca Specialmente un qualsiasi numero di mostri "Ninja" dal tuo Deck, scoperti in Posizione di Attacco e/o coperti in Posizione di Difesa, la cui somma dei Livelli sia pari o inferiore al Livello del mostro offerto come Tributo. Quando questa carta lascia il Terreno, distruggi quei mostri.
+  pt: |-
+    Ative este card ao oferecer como Tributo 1 monstro "Ninja"; Invoque por Invocação-Especial qualquer número de monstros "Ninja" do seu Deck, com a face para cima em Posição de Ataque e/ou com a face para baixo em Posição de Defesa, cuja soma dos Níveis seja igual ou menor que o Nível do monstro oferecido como Tributo. Quando este card deixar o campo, destrua esses monstros.
   ja: |-
     ①：自分フィールドの「忍者」モンスター１体をリリースしてこのカードを発動できる。レベルの合計がリリースしたモンスターのレベル以下になるように、デッキから「忍者」モンスターを任意の数だけ選び、それぞれ表側攻撃表示または裏側守備表示で特殊召喚する。このカードがフィールドから離れた時にそのモンスターは全て破壊される。
   ko: |-
