--- a/data/cards/73445448.yaml
+++ b/data/cards/73445448.yaml
@@ -19,19 +19,19 @@ text:
     Must be Xyz Summoned and cannot be Special Summoned by other ways. Once per turn, during either player's turn: You can detach 1 Xyz Material from this card and send 1 card from your hand to the Graveyard, then target 1 face-up card your opponent controls; change this card to Defense Position, and if you do, that face-up card has its effects negated until the end of this turn.
   de: |-
     2 FINSTERNIS Monster der Stufe 8
-    Muss als Xyz-Beschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Einmal pro Spielzug, während des Spielzugs eines beliebigen Spielers: Du kannst 1 Xyz-Material von dieser Karte abhängen und 1 Karte von deiner Hand auf den Friedhof legen und dann 1 offene Karte wählen, die dein Gegner kontrolliert; ändere diese Karte in die Verteidigungsposition und falls du dies tust, bleiben die Effekte der offenen Karte bis zum Ende dieses Spielzugs annulliert.
+    Muss als Xyz-Beschwörung beschworen werden. Einmal pro Spielzug (Schnelleffekt): Du kannst 1 Material von dieser Karte abhängen und 1 Karte von deiner Hand auf den Friedhof legen und dann 1 offene Karte wählen, die dein Gegner kontrolliert; ändere diese Karte in die Verteidigungsposition und falls du dies tust, annulliere die Effekte jener als Ziel gewählten Karte bis zum Ende dieses Spielzugs.
   es: |-
     2 monstruos de OSCURIDAD de Nivel 8
-    Debe ser Invocado Xyz y no puede ser Invocado de Modo Especial de otra forma. Una vez por turno, durante el turno de cualquier jugador: puedes desacoplar de esta carta 1 Material Xyz y mandar al Cementerio 1 carta en tu mano, y después seleccionar 1 carta boca arriba que controle tu adversario; cambia esa carta a Posición de Defensa y, si lo haces, hasta el final de este turno, esa carta boca arriba ve negados sus efectos.
+    Debe ser Invocado Xyz. Una vez por turno (Efecto Rápido): puedes desacoplar 1 material de esta carta y mandar al Cementerio 1 carta en tu mano, y después selecciona 1 carta boca arriba que controle tu adversario; cambia esta carta a Posición de Defensa y, si lo haces, niega los efectos de esa carta seleccionada hasta el final de este turno.
   fr: |-
     2 monstres TÉNÈBRES de Niveau 8
-    Uniquement Invocable par Xyz et non Invocable Spécialement autrement. Une fois par tour, durant le tour de chaque joueur : vous pouvez détacher 1 Matériel Xyz de cette carte et envoyer 1 carte depuis votre main au Cimetière, puis ciblez 1 carte face recto contrôlée par votre adversaire ; changez cette carte en Position de Défense, et si vous le faites, la carte face recto a ses effets annulés jusqu'à la fin de ce tour.
+    Uniquement Invocable par Xyz. Une fois par tour (Effet Rapide) : vous pouvez détacher 1 Matériel de cette carte et envoyer 1 carte depuis votre main au Cimetière, puis ciblez 1 carte face recto contrôlée par votre adversaire ; changez cette carte en Position de Défense, et si vous le faites, annulez les effets de la carte ciblée jusqu'à la fin de ce tour.
   it: |-
     2 mostri OSCURITÀ di Livello 8
-    Deve essere Evocato Xyz e non può essere Evocato Specialmente in altri modi. Una volta per turno, durante il turno di qualsiasi giocatore: puoi staccare 1 Materiale Xyz da questa carta e mandare 1 carta dalla tua mano al Cimitero, poi scegliere come bersaglio 1 carta scoperta controllata dal tuo avversario; metti questa carta in Posizione di Difesa e, se lo fai, gli effetti di quella carta scoperta si annullano fino alla fine di questo turno.
+    Deve essere Evocato Xyz. Una volta per turno (Effetto Rapido): puoi staccare 1 materiale da questa carta e mandare 1 carta dalla tua mano al Cimitero, poi scegliere come bersaglio 1 carta scoperta controllata dal tuo avversario; metti questa carta in Posizione di Difesa e, se lo fai, annulla gli effetti di quella carta scelta come bersaglio, fino alla fine di questo turno.
   pt: |-
     2 monstros de TREVAS de Nível 8
-    Deve ser Invocado por Invocação-Xyz e não pode ser Invocado por Invocação-Especial de nenhuma outra forma. Uma vez por turno, durante o turno de qualquer duelista: você pode desassociar 1 Matéria Xyz deste card e enviar 1 card da sua mão para o Cemitério e, depois, escolher 1 card com a face para cima que seu oponente controla; coloque este card em Posição de Defesa e, se isso acontecer, esse card com a face para cima tem seus efeitos negados até o final deste turno.
+    Deve ser Invocado por Invocação-Xyz. Uma vez por turno (Efeito Rápido): você pode desassociar 1 matéria deste card e enviar 1 card da sua mão para o Cemitério e, depois, escolha 1 card com a face para cima que seu oponente controla; coloque este card em Posição de Defesa e, se isso acontecer, negue os efeitos do card alvo até o final deste turno.
   ja: |-
     闇属性レベル８モンスター×２
     このカードはＸ召喚でしか特殊召喚できない。①：１ターンに１度、このカードがフィールドに攻撃表示で存在する場合、このカードのＸ素材を１つ取り除き、手札を１枚墓地へ送り、相手フィールドの表側表示のカード１枚を対象として発動できる。このカードを守備表示にし、対象のカードの効果をターン終了時まで無効にする。この効果は相手ターンでも発動できる。
