--- a/data/cards/03734202.yaml
+++ b/data/cards/03734202.yaml
@@ -19,25 +19,25 @@ text:
     ● You can Tribute 1 EARTH Insect-Type monster; Special Summon 1 Level 4 or lower EARTH Plant-Type monster from your Deck.
     ● You can Tribute 1 EARTH Plant-Type monster; Special Summon 1 Level 4 or lower EARTH Insect-Type monster from your Deck.
   de: |-
-    Falls diese Karte auf den Friedhof gelegt wird: Füge deiner Hand 1 „Naturia“-Karte von deinem Deck hinzu, außer „Naturias heiliger Baum“. Du kannst nur 1 der folgenden Effekte von „Naturias heiliger Baum“ pro Spielzug verwenden und in dem Spielzug nur einmal.
-    ● Du kannst 1 ERDE Monster vom Typ Insekt als Tribut anbieten; beschwöre 1 ERDE Monster vom Typ Pflanze der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck.
-    ● Du kannst 1 ERDE Monster vom Typ Pflanze als Tribut anbieten; beschwöre 1 ERDE Monster vom Typ Insekt der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck.
+    Falls diese Karte auf den Friedhof gelegt wird: Füge deiner Hand 1 „Naturia“-Karte von deinem Deck hinzu, außer „Naturias heiliger Baum“. Du kannst nur 1 der folgenden Effekte von „Naturias heiliger Baum“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
+    ● Du kannst 1 ERDE Insekt-Monster als Tribut anbieten; beschwöre 1 ERDE Pflanze-Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck.
+    ● Du kannst 1 ERDE Pflanze-Monster als Tribut anbieten; beschwöre 1 ERDE Insekt-Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck.
   es: |-
-    Si esta carta es mandada al Cementerio: añade a tu mano 1 carta "Naturia" en tu Deck, excepto "Árbol Sagrado Naturia". Sólo puedes usar 1 de los siguientes efectos de "Árbol Sagrado Naturia" por turno, y solamente una vez ese turno.
-    ● Puedes Sacrificar 1 monstruo de TIERRA de Tipo Insecto; Invoca de Modo Especial, desde tu Deck, 1 monstruo de TIERRA de Tipo Planta de Nivel 4 o menor.
-    ● Puedes Sacrificar 1 monstruo de TIERRA de Tipo Planta; Invoca de Modo Especial, desde tu Deck, 1 monstruo de TIERRA de Tipo Insecto de Nivel 4 o menor.
+    Si esta carta es mandada al Cementerio: añade a tu mano 1 carta "Naturia" en tu Deck, excepto "Árbol Sagrado Naturia". Sólo puedes usar 1 de los siguientes efectos de "Árbol Sagrado Naturia" por turno, y sólo una vez ese turno.
+    ● Puedes Sacrificar 1 monstruo Insecto de TIERRA; Invoca de Modo Especial, desde tu Deck, 1 monstruo Planta de TIERRA de Nivel 4 o menor.
+    ● Puedes Sacrificar 1 monstruo Planta de TIERRA; Invoca de Modo Especial, desde tu Deck, 1 monstruo Insecto de TIERRA de Nivel 4 o menor.
   fr: |-
     Si cette carte est envoyée au Cimetière : ajoutez 1 carte "Naturia" ("Arbre Sacrée Naturia" exclu) depuis votre Deck à votre main. Vous ne pouvez utiliser qu'1 des effets suivants de "Arbre Sacrée Naturia" par tour, et uniquement une fois le tour.
-    ● Vous pouvez Sacrifier 1 monstre TERRE de Type Insecte ; Invoquez Spécialement 1 monstre TERRE de Type Plante de max. Niveau 4 depuis votre Deck.
-    ● Vous pouvez Sacrifier 1 monstre TERRE de Type Plante ; Invoquez Spécialement 1 monstre TERRE de Type Insecte de max. Niveau 4 depuis votre Deck.
+    ● Vous pouvez Sacrifier 1 monstre TERRE Insecte ; Invoquez Spécialement 1 monstre TERRE Plante de max. Niveau 4 depuis votre Deck.
+    ● Vous pouvez Sacrifier 1 monstre TERRE Plante ; Invoquez Spécialement 1 monstre TERRE Insecte de max. Niveau 4 depuis votre Deck.
   it: |-
     Se questa carta viene mandata al Cimitero: aggiungi 1 carta "Naturia" dal tuo Deck alla tua mano, eccetto "Naturia l'Albero Sacro". Puoi utilizzare solo 1 dei seguenti effetti di "Naturia l'Albero Sacro" per turno, e solo una volta in quel turno.
-    ● Puoi offrire come Tributo 1 mostro TERRA di Tipo Insetto; Evoca Specialmente 1 mostro TERRA di Tipo Pianta di Livello 4 o inferiore dal tuo Deck.
-    ● Puoi offrire come Tributo 1 mostro TERRA di Tipo Pianta; Evoca Specialmente 1 mostro TERRA di Tipo Insetto di Livello 4 o inferiore dal tuo Deck.
+    ● Puoi offrire come Tributo 1 mostro TERRA Insetto; Evoca Specialmente 1 mostro TERRA Pianta di Livello 4 o inferiore dal tuo Deck.
+    ● Puoi offrire come Tributo 1 mostro TERRA Pianta; Evoca Specialmente 1 mostro TERRA Insetto di Livello 4 o inferiore dal tuo Deck.
   pt: |-
     Se este card for enviado para o Cemitério: adicione 1 card "Naturia" do seu Deck à sua mão, exceto "Árvore Sagrada de Naturia". Você só pode usar 1 dos seguintes efeitos de "Árvore Sagrada de Naturia" por turno e apenas uma vez por turno.
-    ● Você pode oferecer como Tributo 1 monstro de TERRA do Tipo Inseto; Invoque por Invocação-Especial 1 monstro de TERRA do Tipo Planta de Nível 4 ou menos do seu Deck.
-    ● Você pode oferecer como Tributo 1 monstro de TERRA do Tipo Planta; Invoque por Invocação-Especial 1 monstro de TERRA do Tipo Inseto de Nível 4 ou menos do seu Deck.
+    ● Você pode oferecer como Tributo 1 monstro Inseto de TERRA; Invoque por Invocação-Especial 1 monstro Planta de TERRA de Nível 4 ou menos do seu Deck.
+    ● Você pode oferecer como Tributo 1 monstro Planta de TERRA; Invoque por Invocação-Especial 1 monstro Inseto de TERRA de Nível 4 ou menos do seu Deck.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドの昆虫族・地属性モンスター１体をリリースして発動できる。デッキからレベル４以下の植物族・地属性モンスター１体を特殊召喚する。②：自分フィールドの植物族・地属性モンスター１体をリリースして発動できる。デッキからレベル４以下の昆虫族・地属性モンスター１体を特殊召喚する。③：このカードが墓地へ送られた場合に発動する。デッキから「ナチュルの神星樹」以外の「ナチュル」カード１枚を手札に加える。
   ko: |-
