--- a/data/cards/11021521.yaml
+++ b/data/cards/11021521.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     During your opponent's turn, when this card in your possession is sent to your Graveyard by an opponent's card effect: It becomes the End Phase of this turn.
   de: |-
-    Während des Spielzugs deines Gegners, wenn diese Karte, die dir gehört, durch einen Karteneffekt deines Gegners auf deinen Friedhof gelegt wird: Beginne die End Phase dieses Spielzugs.
+    Während des Spielzugs deines Gegners, wenn diese Karte, die dir gehört, durch einen Karteneffekt eines Gegners auf deinen Friedhof gelegt wird: Die End Phase dieses Spielzugs beginnt.
   es: |-
-    Durante el turno de tu adversario, cuando esta carta en tu posesión es mandada a tu Cementerio por el efecto de una carta de tu adversario: pasa a la End Phase de este turno.
+    Durante el turno de tu adversario, cuando esta carta en tu posesión es mandada a tu Cementerio por efecto de una carta del adversario: pasa a la End Phase de este turno.
   fr: |-
-    Durant le tour de votre adversaire, lorsque cette carte en votre possession est envoyée à votre Cimetière par un effet de carte de votre adversaire : passez à la End Phase de ce tour.
+    Durant le tour de votre adversaire, lorsque cette carte en votre possession est envoyée à votre Cimetière par un effet de carte de l'adversaire : passez à la End Phase de ce tour.
   it: |-
-    Durante il turno del tuo avversario, quando questa carta sotto il tuo comando viene mandata al tuo Cimitero dall'effetto di una carta del tuo avversario: passa alla End Phase di questo turno.
+    Durante il turno del tuo avversario, quando questa carta sotto il tuo comando viene mandata al tuo Cimitero dall'effetto di una carta dell'avversario: passa alla End Phase di questo turno.
   pt: |-
     Durante o turno do seu oponente, quando este card em sua posse for enviado para o seu Cemitério por um efeito de card do oponente: essa se torna a Fase Final deste turno.
   ja: |-
