--- a/data/cards/47594939.yaml
+++ b/data/cards/47594939.yaml
@@ -17,9 +17,9 @@ text:
   en: |-
     Neither player can Special Summon monsters with the same Level as those they control. Neither player can Special Summon monsters with the same Rank as those they control.
   de: |-
-    Kein Spieler kann Monster mit derselben Stufe wie Monster, die er kontrolliert, als Spezialbeschwörung beschwören. Kein Spieler kann Monster mit demselben Rang wie Monster, die er kontrolliert, als Spezialbeschwörung beschwören.
+    Kein Spieler kann Monster mit derselben Stufe wie jene, die er kontrolliert, als Spezialbeschwörung beschwören. Kein Spieler kann Monster mit demselben Rang wie jene, die er kontrolliert, als Spezialbeschwörung beschwören.
   es: |-
-    Ningún jugador puede Invocar de Modo Especial monstruos con el mismo Nivel que aquellos que controlen. Ningún jugador puede Invocar de Modo Especial monstruos del mismo Rango que aquellos que controlen.
+    Ningún jugador puede Invocar de Modo Especial monstruos con el mismo Nivel que aquellos que controle. Ningún jugador puede Invocar de Modo Especial monstruos del mismo Rango que aquellos que controle.
   fr: |-
     Aucun joueur ne peut Invoquer Spécialement de monstres du même Niveau que ceux qu'il contrôle. Aucun joueur ne peut Invoquer Spécialement de monstres du même Rang que ceux qu'il contrôle.
   it: |-
