--- a/data/cards/76913983.yaml
+++ b/data/cards/76913983.yaml
@@ -18,20 +18,20 @@ text:
     1 "Blackwing" Tuner + 1 or more non-Tuner monsters
     If this card attacks a Defense Position monster, it gains 500 ATK during the Damage Step only, also inflict piercing battle damage to your opponent.
   de: |-
-    1 „Schwarzflügel“-Empfänger- + 1 oder mehr Nicht-Empfänger-Monster
-    Falls diese Karte ein Monster in Verteidigungsposition angreift, erhält sie nur während des Damage Steps 500 ATK, zusätzlich füge deinem Gegner durchschlagenden Kampfschaden zu.
+    1 „Schwarzflügel“-Empfänger + 1+ Nicht-Empfänger-Monster
+    Falls diese Karte ein Monster in Verteidigungsposition angreift, erhält sie nur während des Damage Steps 500 ATK, zusätzlich füge durchschlagenden Kampfschaden zu.
   es: |-
-    1 Cantante "Alanegra" + 1 o más monstruos que no sean Cantantes
-    Si esta carta ataca un monstruo en Posición de Defensa, gana 500 ATK sólo durante el Damage Step, y además inflige daño de batalla de penetración a tu adversario.
+    1 Cantante "Alanegra" + 1+ monstruos que no sean Cantantes
+    Si esta carta ataca un monstruo en Posición de Defensa, gana 500 ATK sólo durante el Damage Step, y además inflige daño de batalla de penetración.
   fr: |-
-    1 Syntoniseur "Aile Noire" + 1 monstre non-Syntoniseur ou plus
-    Si cette carte attaque un monstre en Position de Défense, elle gagne 500 ATK durant la Damage Step uniquement, et aussi, infligez des dommages de combat perçants à votre adversaire.
+    1 Syntoniseur "Aile Noire" + 1+ monstre non-Syntoniseur
+    Si cette carte attaque un monstre en Position de Défense, elle gagne 500 ATK durant la Damage Step uniquement, et aussi, infligez des dommages de combat perçants.
   it: |-
-    1 Tuner "Alanera" + 1 o più mostri non-Tuner
-    Se questa carta attacca un mostro in Posizione di Difesa, essa guadagna 500 ATK solamente durante il Damage Step, inoltre infliggi danno da combattimento perforante al tuo avversario.
+    1 Tuner "Alanera" + 1+ mostri non-Tuner
+    Se questa carta attacca un mostro in Posizione di Difesa, essa guadagna 500 ATK solamente durante il Damage Step, inoltre infliggi danno da combattimento perforante.
   pt: |-
-    1 Regulador "Asanegra" + 1 ou mais monstros não-Reguladors
-    Se este card atacar um monstro em Posição de Defesa, ele ganha 500 de ATK apenas durante a Etapa de Dano. Se este card atacar um monstro Posição de Defesa, cause dano de batalha perfurante ao seu oponente.
+    1 Regulador "Asanegra" + 1+ monstros não-Reguladores
+    Se este card atacar um monstro em Posição de Defesa, ele ganha 500 de ATK apenas durante a Etapa de Dano e, além disso, cause dano de batalha perfurante.
   ja: |-
     「ＢＦ」チューナー＋チューナー以外のモンスター１体以上
     ①：このカードが守備表示モンスターを攻撃するダメージステップの間、このカードの攻撃力は５００アップする。②：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える。
