--- a/data/cards/83266092.yaml
+++ b/data/cards/83266092.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     All Level 6 or higher Special Summoned monsters on the field cannot declare attacks or activate their effects.
   de: |-
-    Alle offenen Monster der Stufe 6 oder höher auf dem Spielfeld, die als Spezialbeschwörung beschworen wurden, können weder angreifen noch ihre Effekte aktivieren.
+    Weder können als Spezialbeschwörung beschworene Monster der Stufe 6 oder höher auf dem Spielfeld Angriffe deklarieren noch können Spieler ihre Effekte aktivieren.
   es: |-
-    Todos los monstruos en el Campo de Nivel 6 o mayor Invocados de Modo Especial no pueden declarar ataques o activar sus efectos.
+    Los monstruos en el Campo de Nivel 6 o mayor Invocados de Modo Especial no pueden declarar ataques, ni los jugadores activar sus efectos.
   fr: |-
-    Tous les monstres de min. Niveau 6 Invoqués Spécialement sur le Terrain ne peuvent ni déclarer d'attaque ni activer leurs effets.
+    Les monstres de min. Niveau 6 Invoqués Spécialement sur le Terrain ne peuvent pas déclarer d'attaque et aucun joueur ne peut activer leurs effets.
   it: |-
-    Tutti i mostri di Livello 6 o superiore Evocati Specialmente sul Terreno non possono dichiarare un attacco o attivare i loro effetti.
+    I mostri di Livello 6 o superiore Evocati Specialmente sul Terreno non possono dichiarare attacchi, e i giocatori non possono attivare i loro effetti.
   pt: |-
-    Todos os monstros de Nível 6 ou mais no campo Invocados por Invocação-Especial não podem declarar ataques ou ativar seus efeitos.
+    Monstros de Nível 6 ou mais no campo, Invocados por Invocação-Especial, não podem declarar ataques, e os duelistas não podem ativar seus efeitos.
   ja: |-
     このカードがフィールド上に表側表示で存在する限り、フィールド上に表側表示で存在するレベル６以上の特殊召喚したモンスターは攻撃宣言をする事ができず、効果を発動する事もできない。
   ko: |-
