--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1132,6 +1132,10 @@ sets:
     set_name: The Rarity Collection
     rarities:
     - Holographic Rare
+  - set_number: CL02-SC002
+    set_name: Classic Pack 02
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
