--- a/data/cards/yugipedia904577.yaml
+++ b/data/cards/yugipedia904577.yaml
@@ -32,7 +32,7 @@ attribute: FIRE
 rank: 8
 atk: 2800
 def: 1500
-materials: 2+ Level 8 monsters
+materials: 2 or more Level 8 monsters
 sets:
   ja:
   - set_number: PHHY-JP045
