--- a/data/cards/12524259.yaml
+++ b/data/cards/12524259.yaml
@@ -12,7 +12,7 @@ name:
   ko: 메일팩터즈 커맨드
   ko_rr: Meilpaekteojeu Keomaendeu
   zh-TW:
-  zh-CN: 无许可的再奇动
+  zh-CN: 恣动机群指令・再奇动
 text:
   en: |-
     Target 1 Machine monster you control; equip 1 appropriate Machine Union monster from your hand or Deck to that monster, but the Union monster you equipped cannot be Special Summoned this turn. You can only activate 1 "Unauthorized Reactivation" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터에, 장착 가능한 기계족 유니온 몬스터 1장을 패 / 덱에서 장착한다. 이 효과로 장착한 유니온 몬스터는, 이 턴에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：以自己场上1只机械族怪兽为对象才能发动。那只怪兽把可以装备的1只机械族同盟怪兽从手卡·卡组装备。这个效果装备的同盟怪兽在这个回合不能特殊召唤。
+    此卡名的卡1回合仅可发动1张。①：以自己场上的1只机械族怪兽为对象可以发动。从手牌・牌组将1只可装备的机械族联合怪兽装备于该怪兽。以此效果装备的联合怪兽此回合不可特殊召唤。
 card_type: Spell
 property: Quick-Play
 sets:
@@ -72,6 +71,11 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC023
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
