--- a/data/cards/62320425.yaml
+++ b/data/cards/62320425.yaml
@@ -1,7 +1,7 @@
 konami_id: 17606
 password: 62320425
 name:
-  en: Agido the Ancient Sentry
+  en: Agido the Ancient Sentinel
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 古卫兵 阿基多
 text:
   en: |-
-    If a card(s) is sent from the hand and/or Deck to your opponent's GY (except during the Damage Step): You can Special Summon this card from your hand, then you can Special Summon 1 Level 4 EARTH Fairy monster from your GY, except "Agido the Ancient Sentry". If this card is sent from the hand or Deck to the GY: You can send the top 5 cards of each player's Deck to the GY, then, if "Exchange of the Spirit" is in your GY, you can send the top 5 cards of either player's Deck to the GY. You can only use each effect of "Agido the Ancient Sentry" once per turn.
+    If a card(s) is sent from the hand or Deck to your opponent's GY (except during the Damage Step): You can Special Summon this card from your hand, then you can Special Summon 1 Level 4 EARTH Fairy monster from your GY, except "Agido the Ancient Sentinel". If this card is sent from the hand or Deck to the GY: You can activate this effect; each player sends the top 5 cards of their Deck to the GY (or their entire Deck, if less than 5), then, if "Exchange of the Spirit" is in your GY, you can send 5 more cards from the top of either player's Deck to the GY. You can only use each effect of "Agido the Ancient Sentinel" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1300
 series:
 - Exchange of the Spirit
 sets:
+  en:
+  - set_number: MAMA-EN???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP024
     set_name: 'Duelist Pack: Duelists of Pyroxene'
