--- a/data/cards/yugipedia904850.yaml
+++ b/data/cards/yugipedia904850.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 of your banished monsters and 1 of your opponent’s banished monsters; Special Summon your monster to your opponent’s field, and if you do, Special Summon that opponent’s monster to your field. You can only activate 1 "Alpha Summon" per turn.
+    Target 1 of your banished monsters and 1 of your opponent's banished monsters; Special Summon your monster to your opponent's field, and if you do, Special Summon that opponent's monster to your field. You can only activate 1 "Alpha Summon" per turn.
   de:
   es:
   fr:
