--- a/data/cards/74063034.yaml
+++ b/data/cards/74063034.yaml
@@ -156,6 +156,14 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: SLF1-JP032
+    set_name: Selection 5
+    rarities:
+    - Normal Parallel Rare
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
   ko:
   - set_number: SPFE-KR035
     set_name: 'Booster SP: Fusion Enforcers'
