--- a/data/cards/09726840.yaml
+++ b/data/cards/09726840.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 闪刀起动-连刀
 text:
   en: |-
-    If you control no monsters in your Main Monster Zone: Send 1 other card you control to the GY, and if you do, Special Summon 1 "Sky Striker Ace" monster from your Extra Deck to the Extra Monster Zone, and if you have at least 1 LIGHT and 1 DARK "Sky Striker Ace" monster on your field and/or in your GY, the Summoned monster gains 1000 ATK. For the rest of this turn after this card resolves, you cannot Special Summon monsters from the Extra Deck, except "Sky Striker Ace" monsters.
+    If you control no monsters in your Main Monster Zone: You cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves, except "Sky Striker Ace" monsters, also send 1 other card you control to the GY, and if you do, Special Summon 1 "Sky Striker Ace" monster from your Extra Deck to the Extra Monster Zone, and if you have at least 1 LIGHT and 1 DARK "Sky Striker Ace" monster on your field and/or in your GY, the Summoned monster gains 1000 ATK.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Quick-Play
 series:
 - Sky Striker
 sets:
+  en:
+  - set_number: MAMA-EN???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SSB1-JP002
     set_name: Secret Shiny Box
