--- a/data/cards/62219643.yaml
+++ b/data/cards/62219643.yaml
@@ -1,7 +1,7 @@
 konami_id: 17036
 password: 62219643
 name:
-  en: Ghost Meets Girl - A Mayakashi and Shiranui's Tale
+  en: Ghost Meets Girl - A Masterful Mayakashi Shiranui Saga
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 逢华妖丽谭-魔妖不知火语
 text:
   en: |-
-    Tribute 1 "Mayakashi" or "Shiranui" Synchro or Link Monster; neither player can Special Summon monsters from the hand, Deck, or Extra Deck for the rest of this turn. You can banish this card from your GY, then target 1 of your banished Zombie monsters; return it to the GY. You can only use 1 "Ghost Meets Girl - A Mayakashi and Shiranui's Tale" effect per turn, and only once that turn.
+    Tribute 1 "Mayakashi" or "Shiranui" Synchro or Link Monster; neither player can Special Summon monsters from the hand, Deck, or Extra Deck for the rest of this turn. You can banish this card from your GY, then target 1 of your banished Zombie monsters; return it to the GY. You can only use 1 "Ghost Meets Girl - A Masterful Mayakashi Shiranui Saga" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -36,6 +36,31 @@ series:
 - Mayakashi
 - Shiranui
 sets:
+  en:
+  - set_number: MAMA-EN???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT???
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SSB1-JPS04
     set_name: Secret Shiny Box
