--- a/data/cards/90673288.yaml
+++ b/data/cards/90673288.yaml
@@ -133,6 +133,14 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Secret Rare
+  - set_number: SLF1-JP039
+    set_name: Selection 5
+    rarities:
+    - Normal Parallel Rare
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
   ko:
   - set_number: DBDS-KR028
     set_name: 'Deck Build Pack: Dark Savers'
