--- a/data/cards/08240199.yaml
+++ b/data/cards/08240199.yaml
@@ -12,7 +12,7 @@ name:
   ko: 파란 눈의 현사
   ko_rr: Paran Nun-ui Hyeonsa
   zh-TW:
-  zh-CN: 青色眼睛的贤士
+  zh-CN: 青之眼贤士
 text:
   en: |-
     When this card is Normal Summoned: You can add 1 Level 1 LIGHT Tuner from your Deck to your hand, except "Sage with Eyes of Blue". You can discard this card, then target 1 Effect Monster you control; send it to the GY, and if you do, Special Summon 1 "Blue-Eyes" monster from your Deck. You can only use this effect of "Sage with Eyes of Blue" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 "파란 눈의 현사" 이외의 빛 속성 / 레벨 1 튜너 1장을 패에 넣는다. ②: 이 카드를 패에서 버리고, 자신 필드의 효과 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 묘지로 보내고, 덱에서 "푸른 눈" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。①：这张卡召唤成功时才能发动。从卡组把「青色眼睛的贤士」以外的1只光属性·1星调整加入手卡。②：把这张卡从手卡丢弃，以自己场上1只效果怪兽为对象才能发动。那只怪兽送去墓地，从卡组把1只「青眼」怪兽特殊召唤。
+    此卡名的②效果1回合仅可使用1次。①：此卡召唤成功时可以发动。从牌组将"青之眼贤士"以外的1只光属性・等级1协调加入手牌。②：从手牌将此卡舍弃，以自己场上的1只效果怪兽为对象可以发动。将该怪兽送至墓地，从牌组将1只"青眼"怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Tuner / Effect
 attribute: LIGHT
@@ -147,6 +147,11 @@ sets:
     set_name: Legendary Gold Set
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC007
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
