--- a/data/cards/13529466.yaml
+++ b/data/cards/13529466.yaml
@@ -102,6 +102,12 @@ sets:
     set_name: 'Booster SP: Fusion Enforcers'
     rarities:
     - Super Rare
+  - set_number: SLF1-JP022
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SPFE-KR027
     set_name: 'Booster SP: Fusion Enforcers'
