--- a/data/cards/13647631.yaml
+++ b/data/cards/13647631.yaml
@@ -116,7 +116,7 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP004
     set_name: Selection 5
     rarities:
     - Common
