--- a/data/cards/26096328.yaml
+++ b/data/cards/26096328.yaml
@@ -122,7 +122,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP013
     set_name: Selection 5
     rarities:
     - Common
