--- a/data/cards/49032236.yaml
+++ b/data/cards/49032236.yaml
@@ -153,7 +153,7 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP012
     set_name: Selection 5
     rarities:
     - Common
