--- a/data/cards/49121795.yaml
+++ b/data/cards/49121795.yaml
@@ -83,7 +83,7 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP014
     set_name: Selection 5
     rarities:
     - Common
