--- a/data/cards/51126152.yaml
+++ b/data/cards/51126152.yaml
@@ -138,7 +138,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP002
     set_name: Selection 5
     rarities:
     - Common
