--- a/data/cards/51369889.yaml
+++ b/data/cards/51369889.yaml
@@ -88,7 +88,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP020
     set_name: Selection 5
     rarities:
     - Common
