--- a/data/cards/52481437.yaml
+++ b/data/cards/52481437.yaml
@@ -128,7 +128,7 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP003
     set_name: Selection 5
     rarities:
     - Common
