--- a/data/cards/61692648.yaml
+++ b/data/cards/61692648.yaml
@@ -92,7 +92,7 @@ sets:
     set_name: 'Collectors Pack: Duelist of Legend Version'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP006
     set_name: Selection 5
     rarities:
     - Common
