--- a/data/cards/97520701.yaml
+++ b/data/cards/97520701.yaml
@@ -128,7 +128,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP016
     set_name: Selection 5
     rarities:
     - Common
