--- a/data/cards/07080743.yaml
+++ b/data/cards/07080743.yaml
@@ -99,7 +99,7 @@ sets:
     set_name: 'Collectors Pack: Duelist of Legend Version'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP008
     set_name: Selection 5
     rarities:
     - Common
