--- a/data/cards/24731453.yaml
+++ b/data/cards/24731453.yaml
@@ -152,7 +152,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP005
     set_name: Selection 5
     rarities:
     - Common
