--- a/data/cards/24919805.yaml
+++ b/data/cards/24919805.yaml
@@ -102,7 +102,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP007
     set_name: Selection 5
     rarities:
     - Common
