--- a/data/cards/34475451.yaml
+++ b/data/cards/34475451.yaml
@@ -116,7 +116,7 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP010
     set_name: Selection 5
     rarities:
     - Common
