--- a/data/cards/45674286.yaml
+++ b/data/cards/45674286.yaml
@@ -12,7 +12,7 @@ name:
   ko: 머시너즈 언크러스페어
   ko_rr: Meosineojeu Eonkeureoseupe-eo
   zh-TW:
-  zh-CN: 机甲未分类备用兵
+  zh-CN: 机甲部队・断链备用体
 text:
   en: |-
     If this card is added to your hand, except by drawing it: You can Special Summon it, also you cannot Special Summon for the rest of this turn, except Machine monsters. If this card is Normal or Special Summoned: You can send 1 "Machina" monster from your Deck to the GY, except "Machina Unclaspare". You can only use each effect of "Machina Unclaspare" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 드로우 이외의 방법으로 패에 넣어졌을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 기계족 몬스터밖에 특수 소환할 수 없다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "머시너즈 언크러스페어" 이외의 "머시너즈" 몬스터 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：这张卡用抽卡以外的方法加入手卡的场合才能发动。这张卡特殊召唤。这个效果的发动后，直到回合结束时自己不是机械族怪兽不能特殊召唤。
-    ②：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把「机甲未分类备用兵」以外的1只「机甲」怪兽送去墓地。
+    此卡名的①②效果1回合仅可各使用1次。①：用抽牌以外的方法将此卡加入手牌的情况下可以发动。将此卡特殊召唤。此效果发动后，直至回合结束时为止自己仅可特殊召唤机械族怪兽。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将"机甲部队・断链备用体"以外的1只"机甲部队"怪兽送至墓地。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: DARK
@@ -99,6 +97,11 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Common
+  zh-CN:
+  - set_number: TM01-SC021
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
