--- a/data/cards/79850798.yaml
+++ b/data/cards/79850798.yaml
@@ -108,7 +108,7 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Rare
-  - set_number: SLF1-JP???
+  - set_number: SLF1-JP001
     set_name: Selection 5
     rarities:
     - Common
