--- a/data/cards/86120751.yaml
+++ b/data/cards/86120751.yaml
@@ -124,6 +124,12 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: SLF1-JP021
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SPFE-KR026
     set_name: 'Booster SP: Fusion Enforcers'
