--- a/data/cards/01005587.yaml
+++ b/data/cards/01005587.yaml
@@ -94,6 +94,9 @@ sets:
     set_name: 'Structure Deck R: Dragunity Drive'
     rarities:
     - Common
+  - set_number: SD45-JP030
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: REDU-KR076
     set_name: Return of the Duelist
