--- a/data/cards/03734202.yaml
+++ b/data/cards/03734202.yaml
@@ -107,6 +107,9 @@ sets:
     set_name: Tournament Pack 2022 Vol.3
     rarities:
     - Common
+  - set_number: SD45-JP037
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: NECH-KR076
     set_name: The New Challengers
