--- a/data/cards/29616929.yaml
+++ b/data/cards/29616929.yaml
@@ -176,6 +176,9 @@ sets:
     set_name: 'Structure Deck: Powercode Link'
     rarities:
     - Common
+  - set_number: SD45-JP031
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: JOTL-KR077
     set_name: Judgment of the Light
