--- a/data/cards/48686504.yaml
+++ b/data/cards/48686504.yaml
@@ -233,6 +233,9 @@ sets:
     set_name: Tournament Pack 2021 Vol.1
     rarities:
     - Super Rare
+  - set_number: SD45-JP013
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: EXP1-KR031
     set_name: Extra Pack
