--- a/data/cards/80101899.yaml
+++ b/data/cards/80101899.yaml
@@ -182,6 +182,9 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: SD45-JP034
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: SOFU-KR078
     set_name: Soul Fusion
