--- a/data/cards/91812341.yaml
+++ b/data/cards/91812341.yaml
@@ -161,6 +161,9 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  - set_number: SD45-JP004
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: JOTL-KR033
     set_name: Judgment of the Light
