--- a/data/cards/yugipedia905103.yaml
+++ b/data/cards/yugipedia905103.yaml
@@ -40,7 +40,7 @@ series:
 sets:
   ja:
   - set_number: SD45-JPP02
-    set_name: 'Structure Deck: Forest of the Traptrix'
+    set_name: 'Structure Deck: Forest of the Traptrix Banquet Invitation Pack'
     rarities:
     - Super Rare
     - Secret Rare
