--- a/data/cards/28201945.yaml
+++ b/data/cards/28201945.yaml
@@ -116,6 +116,9 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  - set_number: SD45-JP005
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: JOTL-KR034
     set_name: Judgment of the Light
