--- a/data/cards/29401950.yaml
+++ b/data/cards/29401950.yaml
@@ -432,6 +432,9 @@ sets:
     set_name: Duel Royale Deck Set EX
     rarities:
     - Common
+  - set_number: SD45-JP029
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: LOD-KR092
     set_name: Legacy of Darkness
