--- a/data/cards/45803070.yaml
+++ b/data/cards/45803070.yaml
@@ -140,6 +140,9 @@ sets:
     set_name: Tournament Pack 2020 Vol.1
     rarities:
     - Super Rare
+  - set_number: SD45-JP006
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: PRIO-KR025
     set_name: Primal Origin
