--- a/data/cards/69599136.yaml
+++ b/data/cards/69599136.yaml
@@ -182,6 +182,9 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Rare
+  - set_number: SD45-JP032
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: TDIL-KR076
     set_name: The Dark Illusion
