--- a/data/cards/yugipedia905107.yaml
+++ b/data/cards/yugipedia905107.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If your opponent Special Summoned a monster this turn: Target 1 monster they control with 2000 or more ATK; destroy it, then, if you have a "Hole" Normal Trap in your GY, you can banish 1 monster from your opponent’s GY. You can only activate 1 "Delusion Trap Hole" per turn.
+    If your opponent Special Summoned a monster this turn: Target 1 monster they control with 2000 or more ATK; destroy it, then, if you have a "Hole" Normal Trap in your GY, you can banish 1 monster from your opponent's GY. You can only activate 1 "Delusion Trap Hole" per turn.
   de:
   es:
   fr:
