--- a/data/cards/53325667.yaml
+++ b/data/cards/53325667.yaml
@@ -51,6 +51,7 @@ def: 2400
 materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Rose
+- Field Searcher
 sets:
   en:
   - set_number: LED4-EN023
