--- a/data/cards/61264008.yaml
+++ b/data/cards/61264008.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 61264008
 name:
   en: Repeated Land Transaction
   de:
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja:
-  ja_romaji: Tochi Korogashi
+  ja: <ruby>土<rt>と</rt></ruby><ruby>地<rt>ち</rt></ruby>ころがし
+  ja_romaji: Tochikorogashi
   ko:
   ko_rr:
   zh-TW:
@@ -36,5 +36,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905526
-fake_password:
-- 101111070
