--- a/data/cards/65107325.yaml
+++ b/data/cards/65107325.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 65107325
 name:
   en: Red Vinegar Crossing
   de:
@@ -37,5 +37,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905502
-fake_password:
-- 101111079
