--- a/data/cards/73898890.yaml
+++ b/data/cards/73898890.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 73898890
 name:
   en: Dyna Mond
   de:
@@ -43,5 +43,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905504
-fake_password:
-- 101111050
