--- a/data/cards/90027012.yaml
+++ b/data/cards/90027012.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 90027012
 name:
   en: Choju of the Trillion Hands
   de:
@@ -40,5 +40,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905495
-fake_password:
-- 101111023
