--- a/data/cards/99748883.yaml
+++ b/data/cards/99748883.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 99748883
 name:
   en: Meteorush - Blackwhiteroid
   de:
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 流星連打－シロクロイド
-  ja_romaji:
+  ja: <ruby>流星連打<rt>メテオラッシュ</rt></ruby>－シロクロイド
+  ja_romaji: Meteorasshu - Shirokuroido
   ko:
   ko_rr:
   zh-TW:
@@ -43,5 +43,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905605
-fake_password:
-- 101111029
