--- a/data/cards/99801464.yaml
+++ b/data/cards/99801464.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 99801464
 name:
   en: Silver-Winged AXE-Sarry
   de:
@@ -41,5 +41,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905496
-fake_password:
-- 101111026
