--- a/data/cards/39103226.yaml
+++ b/data/cards/39103226.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 39103226
 name:
   en: Weight Measuring
   de:
@@ -37,5 +37,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905499
-fake_password:
-- 101111078
