--- a/data/cards/52254878.yaml
+++ b/data/cards/52254878.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 52254878
 name:
   en: Dimensional Isoallotope Varis
   de:
@@ -41,5 +41,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905497
-fake_password:
-- 101111028
