--- a/data/cards/91592030.yaml
+++ b/data/cards/91592030.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 91592030
 name:
   en: Threatening Ore - Summonite
   de:
@@ -39,5 +39,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 905505
-fake_password:
-- 101111080
