--- a/data/cards/yugipedia905490.yaml
+++ b/data/cards/yugipedia905490.yaml
@@ -32,9 +32,10 @@ attribute: DARK
 level: 8
 atk: 2900
 def: 2400
-materials: '"Dark Magician" + 1 Level 7 or higher Dragon or Warrior monster'
+materials: '"Dark Magician" + 1 Level 7 or higher Dragon or Warrior-Type monster'
 series:
 - Dark Magician
+- Prophecy
 sets:
   ja:
   - set_number: SUB1-JP001
