--- a/data/cards/31801517.yaml
+++ b/data/cards/31801517.yaml
@@ -176,6 +176,10 @@ sets:
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
     - Common
+  - set_number: PHHY-JPS01
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - PScR
   ko:
   - set_number: PRIO-KR040
     set_name: Primal Origin
