--- a/data/cards/99801464.yaml
+++ b/data/cards/99801464.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>銀<rt>ぎん</rt></ruby><ruby>翼<rt>よく</rt></ruby>の<ruby>ＡＸＥ<rt>アックス</rt></ruby>－サリー
-  ja_romaji: Ginyoku no Akkusu - Sarī
+  ja_romaji: Gin'yoku no Akkusu - Sarī
   ko:
   ko_rr:
   zh-TW:
