--- a/data/cards/07436169.yaml
+++ b/data/cards/07436169.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18219
+password: 7436169
 name:
   en: Trivikarma
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドの「ヴィサス＝スタフロスト」１体と相手フィールドの効果モンスター１体を対象として発動できる。その相手モンスターの効果を無効にし、その元々の攻撃力と元々の守備力の内、高い方の数値の半分だけ対象の自分のモンスターの攻撃力をアップする。②：墓地のこのカードを除外して発動できる。「トリヴィカルマ」以外の「ヴィサス＝スタフロスト」のカード名が記された魔法・罠カード１枚をデッキから手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -32,9 +33,8 @@ sets:
   - set_number: PHHY-JP074
     set_name: Photon Hypernova
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 900036
-fake_password:
-- 101111074
