--- a/data/cards/34047456.yaml
+++ b/data/cards/34047456.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18217
+password: 34047456
 name:
   en: Gigantic Thunder Cross
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：お互いのフィールド・墓地のモンスターの中から、除外されているお互いのカードの枚数の差の数だけ対象として発動できる。そのモンスターを除外する。その後、相手は自身のデッキからモンスター１体を特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,9 +33,8 @@ sets:
   - set_number: PHHY-JP072
     set_name: Photon Hypernova
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 904579
-fake_password:
-- 101111072
