--- a/data/cards/60329973.yaml
+++ b/data/cards/60329973.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18221
+password: 60329973
 name:
   en: Chaos Phantasm
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：除外されている自分の、光属性チューナーとチューナー以外のレベル８以下の闇属性モンスターを１体ずつ対象として発動できる。そのモンスター２体を墓地に戻す。その後、戻したモンスターのレベルの合計と同じレベルを持つ光・闇属性Ｓモンスター１体をＥＸデッキから特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -34,9 +35,8 @@ sets:
   - set_number: PHHY-JP076
     set_name: Photon Hypernova
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 897908
-fake_password:
-- 101111076
