--- a/data/cards/60442460.yaml
+++ b/data/cards/60442460.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18218
+password: 60442460
 name:
   en: Branded Inevitable
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：１ターンに１度、自分フィールドの「ビーステッド」モンスター１体のみを対象とするカードの効果を相手が発動した時、または自分の「ビーステッド」モンスターの効果の発動にチェーンして相手がカードの効果を発動した時、自分または相手の墓地の光・闇属性モンスター１体を対象として発動できる。そのモンスターを除外し、その発動した効果を無効にする。
   ko:
   zh-TW:
   zh-CN:
@@ -34,9 +35,8 @@ sets:
   - set_number: PHHY-JP073
     set_name: Photon Hypernova
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905003
-fake_password:
-- 101111073
