--- a/data/cards/91592030.yaml
+++ b/data/cards/91592030.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18225
 password: 91592030
 name:
   en: Threatening Ore - Summonite
@@ -23,7 +23,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：自分の墓地のモンスター３体を対象として発動できる。自分はその３体の中から１体を選ぶ。その後、相手は以下の効果から１つを選び、自分はその効果を適用する。●選んだモンスターを特殊召喚する。●選んだモンスター以外の対象のモンスターを可能な限り特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -37,5 +38,5 @@ sets:
     - Normal Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905505
