--- a/data/cards/33925864.yaml
+++ b/data/cards/33925864.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18220
+password: 33925864
 name:
   en: Kashtira Big Bang
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：フィールドに「クシャトリラ」Ｘモンスターが存在する場合に発動できる。お互いは自身のフィールドのモンスターが１体になるように裏側表示で除外しなければならない。②：このカードが除外された場合、自分フィールドの「クシャトリラ」Ｘモンスター１体を対象として発動できる。そのモンスターがＸ素材としている自分の「クシャトリラ」モンスター１体を手札に加える。その後、そのモンスターを手札から特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -34,9 +35,8 @@ sets:
   - set_number: PHHY-JP075
     set_name: Photon Hypernova
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 900037
-fake_password:
-- 101111075
