--- a/data/cards/92714517.yaml
+++ b/data/cards/92714517.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18222
+password: 92714517
 name:
   en: Big Welcome Labrynth
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分の手札・デッキ・墓地から「ラビュリンス」モンスター１体を選んで特殊召喚する。その後、自分フィールドのモンスター１体を選んで持ち主の手札に戻す。②：墓地のこのカードを除外し、自分フィールドの悪魔族モンスター１体を対象として発動できる。そのカードを持ち主の手札に戻す。自分フィールドにレベル８以上の悪魔族モンスターが存在する場合、代わりに相手フィールドのカード１枚を対象とする事もできる。
   ko:
   zh-TW:
   zh-CN:
@@ -35,9 +36,8 @@ sets:
   - set_number: PHHY-JP077
     set_name: Photon Hypernova
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 904828
-fake_password:
-- 101111077
