--- a/data/cards/25137581.yaml
+++ b/data/cards/25137581.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>潜<rt>せん</rt></ruby><ruby>伏<rt>ぷく</rt></ruby>する<ruby>Ｇ<rt>ジー</rt></ruby>
-  ja_romaji: Senpuku-suru Jī
+  ja_romaji: Senpukusuru Jī
   ko:
   ko_rr:
   zh-TW:
