--- a/data/cards/02129638.yaml
+++ b/data/cards/02129638.yaml
@@ -40,8 +40,8 @@ text:
     이 카드는 융합 소환 및 이하의 방법으로만 특수 소환할 수 있다. ●자신 몬스터 존의 상기 카드를 묘지로 보냈을 경우에 엑스트라 덱에서 특수 소환할 수 있다("융합"은 필요로 하지 않는다). ①: 이 카드는 전투로는 파괴되지 않는다. ②: 이 카드는 1번의 배틀 페이즈 중에 2회까지 몬스터에 공격할 수 있다. ③: 이 카드의 공격으로 상대 몬스터가 파괴되지 않은 데미지 스텝 종료시에 발동할 수 있다. 그 상대 몬스터를 제외한다.
   zh-TW:
   zh-CN: |-
-    「青眼白龙」＋「青眼白龙」
-    这张卡用融合召唤以及以下方法才能特殊召唤。●把自己的怪兽区域的上记卡送去墓地的场合可以从额外卡组特殊召唤（不需要「融合」）。①：这张卡不会被战斗破坏。②：这张卡在同1次的战斗阶段中最多2次可以向怪兽攻击。③：这张卡的攻击没让对方怪兽被破坏的伤害步骤结束时才能发动。那只对方怪兽除外。
+    "青眼白龙"＋"青眼白龙"
+    此卡仅可以融合召唤及以下方法特殊召唤。●将自己的怪兽区域的上述卡送至墓地的情况下，可从额外牌组特殊召唤（无需"融合"）。①：此卡不会因战斗被破坏。②：此卡在1次战斗阶段中最多可攻击怪兽2次。③：此卡攻击对手怪兽但未将其破坏的伤害步骤结束时可以发动。将该对手怪兽除外。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: LIGHT
@@ -158,6 +158,11 @@ sets:
     set_name: 20th Anniversary Legend Collection
     rarities:
     - Ultra Parallel Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC010
+    set_name: Classic Pack 02
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
