--- a/data/cards/13117073.yaml
+++ b/data/cards/13117073.yaml
@@ -12,7 +12,7 @@ name:
   ko: 경위 바리케이드베르그
   ko_rr:
   zh-TW:
-  zh-CN: 电动路障封锁人
+  zh-CN: 杜宾警卫拦路者
 text:
   en: |-
     2 monsters with different names
@@ -41,8 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     卡名不同的怪兽2只
-    这张卡链接召唤成功的场合，可以舍弃1张手牌发动。这个回合的结束阶段，从自己的墓地将1张永续魔法卡或者场地魔法卡加入手牌。这个卡名的这个效果1回合只能使用1次。
-    只要这张卡在怪兽区存在，自己的表侧表示的魔法卡就不会被对手的效果破坏。
+    此卡名的①效果1回合仅可使用1次。①：此卡连接召唤成功的情况下，舍弃1张手牌可以发动。在此回合的结束阶段，从自己的墓地挑选1张永续魔法卡或场地魔法卡加入手牌。②：只要此卡存在于怪兽区域，自己场上的表侧表示魔法卡不会因对手的效果被破坏。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: DARK
@@ -128,6 +127,11 @@ sets:
     set_name: World Premiere Pack 2020
     rarities:
     - Super Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: TM01-SC093
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
