--- a/data/cards/85969517.yaml
+++ b/data/cards/85969517.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>海造賊<rt>プランドロール</rt></ruby>－<ruby>荘<rt>そう</rt></ruby><ruby>重<rt>ちょう</rt></ruby>のヨルズ<ruby>号<rt>ごう</rt></ruby>
-  ja_romaji: Purandorōru - Sōchō no Yoruzu-Gō
+  ja_romaji: Purandorōru - Sōchō no Yoruzu-gō
   ko:
   ko_rr:
   zh-TW:
