--- a/data/cards/18895832.yaml
+++ b/data/cards/18895832.yaml
@@ -32,7 +32,7 @@ text:
     1000 라이프 포인트를 지불한다. 상대 필드 위와 상대 묘지의 기계족 몬스터를 전부 게임에서 제외한다.
   zh-TW:
   zh-CN: |-
-    支付1000基本分。对方场上和对方墓地的机械族怪兽全部从游戏中除外。
+    ①：支付1000LP可以发动。从对手场上・墓地将所有机械族怪兽除外。
 card_type: Spell
 property: Normal
 sets:
@@ -141,6 +141,11 @@ sets:
     set_name: Advanced Event Pack 2016 Vol.1
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: TM01-SC095
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
