--- a/data/cards/64202399.yaml
+++ b/data/cards/64202399.yaml
@@ -12,7 +12,7 @@ name:
   ko: 딥 오브 푸른 눈
   ko_rr: Dip Obeu Pureun Nun
   zh-TW:
-  zh-CN: 深渊青眼龙
+  zh-CN: 深渊之青眼龙
 text:
   en: |-
     If this card is Special Summoned: You can add 1 Ritual Spell or 1 "Polymerization" from your Deck to your hand. During your End Phase: You can add 1 Level 8 or higher Dragon monster from your Deck to your hand. You can banish this card from your GY; all Level 8 or higher Dragon monsters you control gain 1000 ATK. You can only use each effect of "Blue-Eyes Abyss Dragon" once per turn, and can only activate them while "Blue-Eyes White Dragon" is on your field or in your GY.
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없으며, 자신 필드 또는 자신 묘지에 "푸른 눈의 백룡"이 존재할 경우에밖에 발동할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 의식 마법 카드 또는 "융합" 1장을 패에 넣는다. ②: 자신 엔드 페이즈에 발동할 수 있다. 덱에서 레벨 8 이상의 드래곤족 몬스터 1장을 패에 넣는다. ③: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신 필드의 모든 레벨 8 이상의 드래곤족 몬스터의 공격력은 1000 올린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②③的效果1回合各能使用1次，若非自己场上或者自己墓地有「青眼白龙」存在的场合则不能发动。
-    ①：这张卡特殊召唤成功的场合才能发动。从卡组把1张仪式魔法卡或者「融合」加入手卡。
-    ②：自己结束阶段才能发动。从卡组把1只8星以上的龙族怪兽加入手卡。
-    ③：把墓地的这张卡除外才能发动。自己场上的全部8星以上的龙族怪兽的攻击力上升1000。
+    此卡名的①②③效果1回合仅可各使用1次，仅可在自己场上或自己墓地有"青眼白龙"存在的情况下发动。①：此卡特殊召唤成功的情况下可以发动。从牌组将1张仪式魔法卡或"融合"加入手牌。②：在自己的结束阶段可以发动。从牌组将1只等级8以上的龙族怪兽加入手牌。③：将墓地的此卡除外可以发动。自己场上所有等级8以上的龙族怪兽的攻击力上升1000。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -84,6 +81,11 @@ sets:
     set_name: Legendary Gold Set
     rarities:
     - Ultra Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: CL02-SC001
+    set_name: Classic Pack 02
+    rarities:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
